--- a/posts/2018-02-19.md
+++ b/posts/2018-02-19.md
@@ -28,7 +28,7 @@ Not today.
 
 Today time will move *not backward*. Which is different, slightly.
 
-### Time moves forward
+#### Time moves forward
 
 This is probably the most common case. Most computations you are familiar with move forward, and this is generally quite a safe direction for time to move. Let's look at a concrete example.
 
@@ -68,7 +68,7 @@ Seems like many of the nodes are initially reachable, and then the number wobble
 
 The specific way you interact with differential dataflow is to hold on to input *capabilities*, each corresponding to a specific time. As long as you hold a capability, you can continue to change the input at that time (or any future time). If you would like the computation to move forward, you either need to downgrade (advance) or drop input capabilities, which acts as a proof to differential that you will make no further changes.
 
-### Time moves backward
+#### Time moves backward
 
 Obviously you can't do that. Why would you think you could do that?
 
@@ -76,7 +76,7 @@ In differential, like in the world around us, what's done is done. Once you move
 
 When time moves forward in differential it is permanent; you can't move time backwards.
 
-### Intermission: Unneccesary complexity
+#### Intermission: Unneccesary complexity
 
 Times in differential dataflow don't need to be totally ordered; we can use elements of a partially ordered set, for which two times may simply be incomparable. Neither comes before or after the other.
 
@@ -120,7 +120,7 @@ Whoa, crazy. Let's pretend this is so shocking we accidentally downgrade our `(1
 
 ZOMG ... WHAT ... HAPPENED?!?
 
-### Time moves sideways
+#### Time moves sideways
 
 Huh.
 
@@ -215,31 +215,31 @@ Up above we left open the capability `(0,10)`, and there isn't a great reason to
 
 #### Historical detail
 
-As we run our system time capability forward, repeatedly downgrading to `(system, 0)`, we inform differential dataflow that it is able to discard the distinctions between prior system times. This allows it to compact its representation of the differences, and informally this results in something like a "maintained" trace rather than full historical detail.
+As we run our system time capability forward, repeatedly downgrading to `(system, 0)`, we inform differential dataflow that it is able to discard the distinctions between prior system times. This allows it to compact its representation of the differences, and informally this results in something like a "maintained" event timeline rather than full historical detail.
 
 Similarly, we might want to advance our capability not to `(system, 0)`, but perhaps something like `(system, event - slack)` for some historical `slack` beyond which we do not care to accept updates. In prior work, this might be 10s. Here it is whatever you want it to be, driven as you see fit, for computations that may or may not be windowed because why should that be an a mandatory part of your computational model.
 
 Another natural mode is for one stream processor to accept updates from another stream processor, where they each run on decoupled clocks but at least give crisp information about when their times are complete. If a differential computation takes input from another stream processor that indicates completeness of its own times, then we can advance times `(system, event)` precisely using our own local `system` progress and any `event` progress supplied from the source stream processor. They do not need to move forward synchronously.
 
-By moving our capabilities forward, we allow differential dataflow to compact historical differences, and if `system` and `event` are pretty much the same then we behave almost as if a uni-temporal stream processor.
+By moving our capabilities forward, we allow differential dataflow to compact historical differences, and if `system` and `event` are pretty much the same then we behave almost as if a uni-temporal stream processor. Correctness is guaranteed, and performance is what wobbles if the clocks fall out of sync.
 
-#### Still more multitemporalisms
+### Still more multitemporalisms
 
 There really are a great many more ways to take advantage of partially ordered times and multitemporal analytics. Briefly:
 
-##### Planning and forecasting
+#### Planning and forecasting
 
 Your stream processor may accept dated statements about future events. Perhaps you run a hotel and want to know as of various historical dates what rooms are available in your hotel, then triples `(system, booking, visit)` may be appropriate to pick apart what is known when (or how to amend assignments if someone cancels a historical event).
 
-##### Data integration
+#### Data integration
 
 Your stream processor may ingest data from different sources with different clocks. Perhaps you use a Twitter feed, real-time flight information, and an hourly updated Spark job. You may not want to block your computation by forcing the three sources into a common event time, in which Spark's latency or Twitter's downtime blocks your analysis. Rather, you might like to proceed ahead and at least be clear about what input data your analysis represents. Timestamps `(system, twitter, flights, spark)` would let you do this.
 
-##### Transaction identifiers
+#### Transaction identifiers
 
-Many databases are starting to look more at "early visibility", in which results of transactions are made visible before they have committed, in the interest of prepping subsequent computation. We can use one temporal coordinate to represent a "open transaction identifier" in that we have early result but the results (and those of subsequent transactions) may still change.
+Many databases are starting to look more at "early visibility", in which results of transactions are made visible before they have committed, in the interest of prepping subsequent computation. We can use one temporal coordinate to represent a "open transaction identifier" in that we have early results but these results (and those of subsequent transactions) may still change.
 
-##### There are more
+#### There are more
 
 Seriously, lots more. But I'm going to stop typing now.
 
@@ -247,9 +247,9 @@ Seriously, lots more. But I'm going to stop typing now.
 
 These are actually the conclusions, because time doesn't go backwards.
 
-Differential dataflow programs natively support time-travelling *modifications* to entire *computations*.
+Differential dataflow programs natively support time-travelling *modifications* to entire *computations*. Apparently they have for several years, but it took Renato asking about them to discover this (related: how rare is *discovery* in computer science, amirite?).
 
-Some databases support time-traveling queries, and some debugging systems also allow you to "travel" backwards in time by inspecting your history in a time-ordered view. We are talking about something different here, which is forking your timeline and playing it forward again. Not just "what did my computation look like last week?", but "if I added a record one week ago, how would things look now?" and even "how would they have looked across the week?".
+Some databases support time-traveling queries, and some debugging systems also allow you to "travel" backwards in time by inspecting your history in a time-ordered view. We are talking about something different here, which is forking your timeline and playing it forward again. Not just "what did my computation look like last week?", but "if I added a record one week ago, how would things look now?" and even "how would the entire week have looked?".
 
 This is a bit like live programming, in which your edits to the definition of your computation are immediately (or thereabouts) reflected in the output. We are talking instead about data rather than computation, and at a potentially massive scale and throughput.
 
