--- a/posts/2018-09-26.md
+++ b/posts/2018-09-26.md
@@ -270,6 +270,103 @@ The [zero-copy intra-process allocator](https://github.com/frankmcsherry/timely-
 
 A lightly modified exchange micro-benchmark (like the above, but with more attention paid to the post-exchange operator to avoid copying the resulting buffers) stabilizes at just a few thousand total allocations, even run indefinitely. There were a few gotchas here (avoid Rust's MPSC queues, avoid un/re-boxing the backing memory via `Bytes` helper methods), but it is at a nice spot where we can track down allocations and determine if they are truly necessary, and optimize them where appropriate.
 
-### Scheduling (TODO)
+### Scheduling (2018-12-16)
+
+Let's talk about *scheduling* timely dataflow computations.
+
+Timely dataflows are defined by a directed dataflow of operators, who communicate through directed channels. As the data make their way along the channels, they arrive at operators and those operators probably want to react to this data.
+
+Timely dataflow the system has a "single process, multiple data" (SPMD) design, which means that each of the participating workers is running the same code and doing the same thing, except that they each see different data. This means that each worker has the ability to do just about anything in the dataflow graph, and with great power comes great responsibility. How should a worker figure out what to do next?
+
+Timely dataflow currently *polls* its operators. Each time you call
+
+```rust
+    worker.step();
+```
+
+the worker will swing through each and every dataflow it manages, and for each of them through each and every operator in the dataflow, and for each of the operators the worker calls in and asks it to perform any work it wants to do.
+
+As it turns out, many times operators don't have much of anything to do.
+
+---
+
+**LETS CHECK OUT SOME COMPUTATION!**
+
+There is a neat project called "[Doop](https://yanniss.github.io/doop-oopsla09prelim.pdf)" which does program analysis using Datalog. There is a port of [a primitive version of doop in differential dataflow](https://github.com/frankmcsherry/differential-dataflow/tree/master/doop) and it is a pretty non-trivial dataflow. It has 910 dataflow operators, two mutually recursive scopes each with a bunch of recursive variables.
+
+We are interested in it because this amount of complexity leaves naive polling the opportunity to massively over-schedule dataflow operators. Probably not all 910 of these operators need to be run at any given moment. Probably even fewer of them once we get to the streaming update part of the computation, where very few things change!
+
+We can use timely dataflow's logging infrastructure to see how many times each operator gets scheduled in this computation.
+
+```
+SCHEDULE    (ScheduleEvent { id: 0, start_stop: Start }, 100s, 7026)
+SCHEDULE    (ScheduleEvent { id: 1, start_stop: Start }, 100s, 3)
+SCHEDULE    (ScheduleEvent { id: 2, start_stop: Start }, 100s, 4)
+SCHEDULE    (ScheduleEvent { id: 5, start_stop: Start }, 100s, 7026)
+SCHEDULE    (ScheduleEvent { id: 6, start_stop: Start }, 100s, 3)
+SCHEDULE    (ScheduleEvent { id: 7, start_stop: Start }, 100s, 4)
+SCHEDULE    (ScheduleEvent { id: 10, start_stop: Start }, 100s, 7026)
+...
+```
+
+These events are reporting operator identifiers, the `Start` half of the operator scheduling action, and finally a count (3, 4, or 7026 apparently). That 7026 is relatively bigger, and it happens to be the number of times that we call `worker.step()`. The other operators are the part of input operators that we can shut down, so after a few calls they are just done.
+
+Across all 910 operators, there are 379,185 operator invocations. The computation takes about 8 seconds, so an average of 21 microseconds per invocation. Yay holy crap timescales!
+
+As a preview of where we are going, let's take the same computation and record the number of times we actually *need* to execute these operators (the number of times they are run using a modified scheduler):
+
+```
+SCHEDULE    (ScheduleEvent { id: 0, start_stop: Start }, 100s, 2)
+SCHEDULE    (ScheduleEvent { id: 1, start_stop: Start }, 100s, 2)
+SCHEDULE    (ScheduleEvent { id: 2, start_stop: Start }, 100s, 4)
+SCHEDULE    (ScheduleEvent { id: 5, start_stop: Start }, 100s, 2)
+SCHEDULE    (ScheduleEvent { id: 6, start_stop: Start }, 100s, 2)
+SCHEDULE    (ScheduleEvent { id: 7, start_stop: Start }, 100s, 4)
+SCHEDULE    (ScheduleEvent { id: 10, start_stop: Start }, 100s, 2)
+```
+
+All of those big numbers are gone! Well done, us! It turns out that there is only one operator up in the 7,000s,
+
+```
+SCHEDULE    (ScheduleEvent { id: 1978, start_stop: Start }, 100s, 7143)
+```
+
+which is actually a bit *higher* than the maximum up above (our modified scheduler is a bit lazier). The second largest count is:
+
+```
+SCHEDULE    (ScheduleEvent { id: 1819, start_stop: Start }, 100s, 1625)
+```
+
+which tells us that *most* of these operators don't need anywhere close to 7,000 invocations.
+
+Across the 910 operators there are 113,356 operator invocations in our modified program, and it takes about 6.5 seconds now. That was 1.5 seconds of doing nothing!
+
+Let's get to talking about how we can clean this up!
+
+---
+
+In the world of timely dataflow, there are only three reasons an operator may need to run:
+
+1.  The operator received some input data.
+
+    This is a dataflow system, and the defining characteristic of dataflow systems is that the movement of data is what drives computation. Whenever an operator receives some new input data, we should make sure to run that operator as we aren't done with our computation until we do.
+
+2.  The operator received some progress updates.
+
+    In timely dataflow, we also communicate to operators when they have seen the last of a particular timestamp in their input data. This is not input *data*, and doesn't arrive along data channels, but it is also a legitimate reason to schedule an operator.
+
+3.  The operator has explicitly asked to run.
+
+    Some times operators just want to run. If an operator asks to do so, or perhaps someone else asks on behalf of the operator, we should respect that. For example, input operators are a source of data, and they produce data based on user actions. Once *you* introduce some data into the input, the input produces it as output in the dataflow. However, it is only once you do this that the operator can be productively run.
+
+Fortunately, all three of these reasons are things we can track.
+
+1.  We control the dataflow channels, and when data arrive we can post the operator identifier.
+2.  We control the movement of progress updates, and when they emerge we can post the operator identifier.
+3.  We can supply hooks for any operators or external code to post the operator identifier.
+
+These operators are organized hierarchically, by dataflow and within each dataflow hierarchically by dataflow scope. With a list of active operators, we can carefully navigate only the active operators in the call to `worker.step()` and scheduling only those operators.
+
+There is a bit of a trick with progress updates, and ensuring that we only perform work where there are actual progress updates (as opposed to changes that just cancel). We will get to those tricks in the next post!
 
 ### Progress (TODO)
