--- a/posts/2018-09-26.md
+++ b/posts/2018-09-26.md
@@ -8,7 +8,7 @@ Here are the rough subject headings. Those with links are "done" and those witho
 
 1. [**Dataplane**](https://github.com/frankmcsherry/blog/blob/master/posts/2018-09-26.md#dataplane-19112018): Timely dataflow's *dataplane* is the part of the system dedicated to moving data between workers. While this is likely an important part of any data-intensive system, it is surprisingly important in timely because of timely's data-driven execution. Where other systems can afford to marshall data and round-trip it through multiple threads (and even processes!) if we want to hit microsecond latencies we will need to do things more carefully.
 
-2. **Scheduling**: In a dataflow design the execution model can be purely data-driven: one only needs to do work in response to the arrival of data, and the work one needs to do is fairly clearly defined. This is less important in simple benchmark programs (PageRank! WordCount! YSB!) but absolutely critical in more complex programs that involve thousands of dataflow stages, or in settings where large numbers of concurrent dataflow execute.
+2. [**Scheduling**](https://github.com/frankmcsherry/blog/blob/master/posts/2018-09-26.md#scheduling-2018-12-16): In a dataflow design the execution model can be purely data-driven: one only needs to do work in response to the arrival of data, and the work one needs to do is fairly clearly defined. This is less important in simple benchmark programs (PageRank! WordCount! YSB!) but absolutely critical in more complex programs that involve thousands of dataflow stages, or in settings where large numbers of concurrent dataflow execute.
 
 3. **Progress**: Timely's main coordination mechanism is "progress tracking", which circulates background information about records and capabilities produced and consumed by operators, in such a way that all operators asynchronously maintain conservative views of the possible messages they might receive in the future. Without some care, this has the potential to swamp the computation itself (as demonstrated in [the Naiad paper](https://dl.acm.org/citation.cfm?id=2522738)).
 
