--- a/posts/2018-12-30.md
+++ b/posts/2018-12-30.md
@@ -12,7 +12,7 @@ Well, implementing the Tensorflow *logo* in differential dataflow. That seems li
 
 ### Projekt
 
-There is a cute app called [projekt](https://itunes.apple.com/us/app/projekt/id1244456273) on the Apple app store (and perhaps other places as well). It is a fun game that shows you two 5x5 silhouettes and challenges you to find an arrangement of cubes in a 5x5x5 volume that cast the appropriate shadows (or, "projektions").
+There is a cute (and fun!) app called [Projekt](https://itunes.apple.com/us/app/projekt/id1244456273) on the Apple app store (and perhaps other places as well). It is a fun game that shows you two 5x5 silhouettes and challenges you to find an arrangement of cubes in a 5x5x5 volume that cast the appropriate shadows (or, "projektions").
 
 Here is an example:
 
