--- a/posts/2018-12-30.md
+++ b/posts/2018-12-30.md
@@ -212,7 +212,7 @@ For anything to happen, computationally, we have to advance our inputs. They are
         xz_goal.advance_to(1); xz_goal.flush();
 ```
 
-If we go and run this (at the moment, it is [examples/projekt.rs]() in the differential dataflow repository), we see:
+If we go and run this (at the moment, it is [examples/projekt.rs](https://github.com/frankmcsherry/differential-dataflow/blob/master/examples/projekt.rs) in the differential dataflow repository), we see:
 
 ```
 Echidnatron% cargo run --example projekt
