Fix typo in code

--- a/posts/2019-02-09.md
+++ b/posts/2019-02-09.md
@@ -82,7 +82,7 @@ This is also a minor variation, where instead of *adding* path lengths as we go,
              .map(|(src,(dst,wid),max)|
                 (dst, ::std::cmp::min(wid, max))
              )
-             .concat(&wdith)
+             .concat(&width)
              .reduce(|key, input, output| {
                 // push maximum width (input sorted).
                 output.push((*input.last().unwrap().0, 1))
