--- a/posts/2019-04-12.md
+++ b/posts/2019-04-12.md
@@ -6,7 +6,7 @@ The subjects of demographic study (people) have some quirks that aren't as clear
 
 What with the US Census working through differential privacy for the 2020 census, I've had the chance to see more and more demographers in my twitter timeline, and the results were somewhat surprising.
 
-In one sense, many of the responses were entirely predictable. Enforced differential privacy is an existential threat to a generation of demographers who have limited training in statistical disclosure limitation. Where previously demographers may have received raw data dumps with names redacted, a higher privacy standard means they can no longer do the work they trained to do the way they were trained to do it. This work is, as you might imagine, quite useful and important in a functioning society.
+In one sense, many of the responses were entirely predictable. Enforced differential privacy is an existential threat to a generation of demographers who have limited training in statistical disclosure limitation. Where previously demographers may have received raw data dumps with names redacted, a higher privacy standard means they can no longer do the work they trained to do the way they were trained to do it. This work is, as you might imagine, quite useful and important in a functioning society, and preventing demographers from performing it to the best of their ability is understandably frustrating.
 
 What surprised me then? Two things, as best as I can tell. First, that both the concerns and mechanics of privacy are fundamentally properties of populations; these issues should be right in the demographers wheelhouse, but they seem to have had nothing specific to say about them (most specific data on the subject comes from the US Census itself). Second, as advanced by [Kinsey](https://en.wikipedia.org/wiki/Alfred_Kinsey), privacy guarantees are crucial if you hope to have full and honest participation by a population that can choose what data to contribute, if at all.
 
@@ -69,7 +69,7 @@ Because the US Census could not report the specific processes they applied to th
 
 One very appealing property of differential privacy is that one can be public about the mechanism used, and the levels of noise introduced in the publications. The specific *values* of noise cannot be released, but the exact probabilistic relationship between each publication and the source data can be published in the clear.
 
-A detailed understanding of a statistical process is table stakes for drawing conclusions based observations of that process. It boggles my mind (and the minds of several colleagues) that this is not more of an issue with demographers. I would have imagined demographer *demanding* a clear explanation of the statistical processes in the name of proper science.
+A detailed understanding of a statistical process is table stakes for drawing conclusions based observations of that process. It boggles my mind (and the minds of several colleagues) that this is not more of an issue with demographers. I would have imagined demographers *demanding* a clear explanation of the statistical processes in the name of proper science.
 
 #### Differential privacy can increase accuracy
 
@@ -97,8 +97,8 @@ While there are probably going to be growing pains for a while, the field of dem
 
 Academics LOL'ing about the privacy non-risks is not a helpful contribution.
 
-Aaron Roth likes to point out that one of the more important contributions of differential privacy is that it gives a framework for trading off accuracy and privacy: witholding data provides 0-differential privacy, and releasing data in the clear provides infinite-differential privacy, but there is a spectrum between. As soon as you concede that finite-differential privacy has value, you can have a sane discussion about where the value should be to maximize social good. We can ask serious quantitative questions about the efficacy of enforcing the Civil Rights Act against the risks of disclosing individual detail in immigrant populations.
+Aaron Roth likes to point out that one of the more important contributions of differential privacy is that it gives a framework for trading off accuracy and privacy: witholding data provides 0-differential privacy, and releasing data in the clear provides infinite-differential privacy, but there is a spectrum between. As soon as you concede that finite-differential privacy has value, you can have a sane discussion about where the value should be to maximize social good. We can ask serious quantitative questions about the efficacy of enforcing the Civil Rights Act from accurate data against the risks of disclosing individual detail in immigrant populations.
 
-A lot of the public discourse about differential privacy and demography research is framed as "demographers vs differential privacy", but I contend that very few differential privacy researchers have religion that one *must* use differential privacy. Rather, like Aaron above they have religion that with access to responsible privacy technology, you should have a serious discussion about whether and why you should or should not use it.
+A lot of the public discourse about differential privacy and demography research is framed as "demographers vs differential privacy", but to my experience very few differential privacy researchers have religion that one *must* use differential privacy. Rather, like Aaron above they have religion that with access to responsible privacy technology, you should have a serious discussion about whether and why you should or should not use it. In fairness, our jobs don't depend on people using differential privacy nearly as much as the demographers' jobs appear to depend on them not using it; it's a bit easier to be dispassionate with less skin in the game.
 
-That demographers largely don't understand modern data privacy *is* a reason to be wary of large-scale deployment, but this is also something demographers will need to fix. It also seems they might need some encouragement to do so, and perhaps the US Census and their statutory obligations are a fine way to kick-start that.
+That current demographers largely don't understand modern data privacy *is* a reason to be wary of immediate large-scale deployment, but this is also something demographers will need to fix. It also appears they might need some encouragement to do so, and perhaps the US Census and their statutory obligations are a fine way to kick-start that.
