--- a/posts/2019-04-12.md
+++ b/posts/2019-04-12.md
@@ -1,4 +1,4 @@
-## Differential privacy and Demographics (Draft)
+## Differential privacy and Demographics
 
 [Demography](https://en.wikipedia.org/wiki/Demography) is the study of populations, most commonly *human* populations.
 
