--- a/posts/2019-04-12.md
+++ b/posts/2019-04-12.md
@@ -8,7 +8,7 @@ What with the US Census working through differential privacy for the 2020 census
 
 In one sense, many of the responses were entirely predictable. Enforced differential privacy is an existential threat to a generation of demographers who have limited training in modern data privacy. Where previously demographers may have received raw data dumps with names redacted, a higher privacy standard means they can no longer do the work they trained to do the way they were trained to do it. This work is, as you might imagine, quite useful and important in a functioning society, and preventing demographers from performing it to the best of their ability is understandably frustrating.
 
-What surprised me then? Two things, as best as I can tell. First, that both the concerns and mechanics of privacy are fundamentally properties of populations; these issues should be right in the demographers wheelhouse, but they seem to have had nothing specific to say about them (most specific data on the subject comes from the US Census itself). Second, as advanced by [Kinsey](https://en.wikipedia.org/wiki/Alfred_Kinsey), privacy guarantees are crucial if you hope to have full and honest participation by a population that can choose what data to contribute; I would have thought that other demographers might hold similar values.
+What surprised me then? Two things, as best as I can tell. First, that both the concerns and mechanics of privacy are fundamentally properties of populations; these issues should be right in the demographers wheelhouse, but they seem to have had nothing specific to say about them (most specific data on the subject comes from the US Census itself). Second, as advanced by [Kinsey](https://en.wikipedia.org/wiki/Alfred_Kinsey), privacy guarantees are crucial if you hope to have full and honest participation by a population that can choose what data to contribute; I had thought that other demographers might hold similar values, but it never came up.
 
 ### A demographic study of privacy
 
@@ -28,9 +28,9 @@ If 50% is such a large number, why are we discovering this just now in 2019 rath
 
 What about the social views of privacy violations? Do people care about privacy violations? Do they change their behavior because of perceived privacy risks? Would they not do so with better privacy mechanisms? These all seem like great questions for demographic research. Perhaps this is already underway.
 
-Unfortunately, it seems like there is a bit of a gap here. John's Tweetorial for example indicates that for 46% of 2010 US Census respondents, their quasi-identifiers can be *exactly* reconstructed from statistical information the US Census could (but won't) publish.
+Unfortunately, it seems like there is a bit of a gap here. John's Tweetorial for example indicates that for 46% of 2010 US Census respondents, their quasi-identifiers can be *exactly* reconstructed from statistical information the US Census could publish. This is a serious number, almost half the population, with potentially serious consequences (quasi-identifier release), and something to be concerned about.
 
-This is a serious number, almost half the population, with potentially serious consequences (quasi-identifier release). Instead, we have demographers LOL'ing at how exact reconstruction of quasi-identifiers for 46% of the 2010 respondents "isn't high accuracy".
+Instead, we have prominent demographers LOL'ing at how exact reconstruction of quasi-identifiers for 46% of the 2010 respondents "isn't high accuracy".
 
 ![Shame](https://github.com/frankmcsherry/blog/blob/master/assets/demographers.png)
 
