--- a/posts/2019-04-12.md
+++ b/posts/2019-04-12.md
@@ -52,7 +52,7 @@ We saw this above, with the question:
 
 > How many individuals are uniquely identified by their combination of age, race, gender, ethnicity within their census tract?
 
-The exact response to this question, with the addition of Laplace noise with parameter 2*epsilon, provides epsilon-differential privacy.
+The exact response to this question, with the addition of Laplace noise with parameter 2/epsilon, provides epsilon-differential privacy.
 
 This is neat because while other statistical disclosure limitation mechanisms might randomize and then release the source data, the introduced entropy will increase the apparent number of uniquely identifiable individuals, unfairly over-reporting the threat. Differential privacy's ability to ask direct questions, and get direct answers with unbiased noise, has the potential to dramatically simplify some stastitical analyses.
 
