--- a/posts/2017-09-28.md
+++ b/posts/2017-09-28.md
@@ -30,7 +30,7 @@ I can't speak to the narrative that Rogaway has constructed for himself, other t
 
 I don't understand this complaint. I agree that the harm differential privacy seeks to avoid is in terms of the disclosure of *individual data*, but nothing about differential privacy restricts its guarantees to *individual harm*.
 
-Consider the recent Equifax debacle (*ed: this has been in the outbox for a while*), which we all expect will cause substantial harm to a broad collection of people, both people in the collections whose data are disclosed and people not in the data who nonetheless have to deal with the fallout in their communities. Had differential privacy been respected none of the individual disclosures would have happened, and we are forced to speculate about the community privacy harms that Rogaway fears.
+Consider the recent Equifax debacle (*ed: this has been in the outbox for a while*), which we all expect will cause substantial harm to a broad collection of people, both people in the collections whose data are disclosed and people not in the collections who nonetheless have to deal with the fallout in their communities. Had differential privacy been respected none of the individual disclosures would have happened, and we are forced to speculate about the community privacy harms that Rogaway fears.
 
 It is fair to worry about e.g. the disclosure of statistical information about communities, e.g. creditworthiness in a subpopulation, something that differential privacy might casually reveal. To the extent that you want to suppress statistics about communities, you want something other than differential privacy. I would probably say "something other than 'privacy' at all", because for me the word "privacy" describes individual rights (note: not individual harm), but it is reasonable to disagree about the word.
 
@@ -38,7 +38,7 @@ It is fair to worry about e.g. the disclosure of statistical information about c
 
 Rogaway can contest the claim until he is routinely blue in the face. It won't erase the cases where access to data *does* have social value.
 
-The US Census bureau is tasked with collecting data that is used in no small part (as I understand it) for the enforcement of the Civil Rights Act. This sensitive information contains personal demographic information, as well as several indicators of "how is life working out for you?", and the results reveal whether the US is failing various subpopulations. The proposed alternative of "just don't track access to education by race" or "just don't collect salary information by gender" sounds like a fine solution only to people who not well-positioned to see what goes wrong when we ignore this data.
+The US Census bureau is tasked with collecting data that is used in no small part (as I understand it) for the enforcement of the Civil Rights Act. This sensitive information contains personal demographic information, as well as several indicators of "how is life working out for you?", and the results reveal whether the US is failing various subpopulations. The proposed alternative of "just don't track access to education by race" or "just don't collect salary information by gender" sounds like a fine solution only to people who are not well-positioned to see what goes wrong when we ignore this data.
 
 And, the reason that differential privacy papers don't discuss less or no data collection is the same reason that cryptography papers don't start with the suggestion "maybe don't have so god-damned many secrets!" The work is presented under the premise that it could be useful, but whether it *should be used* is an excellent question that just about all privacy researchers I know have opinions on (both pro and con).
 
